# davinci-mcp-professional

./: .editorconfig  .gitattributes  .gitignore  BUGS.md  CLAUDE.md  CONTRIBUTING.md  Doxyfile  README.md  USING.md  build.py  claude_desktop_config_template.json  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: README.md
docs/html/: README_8md.html  ____init_____8py.html  ____init_____8py.js  ____init_____8py_source.html  __version_8py.html  __version_8py.js  __version_8py_source.html  annotated.html  annotated_dup.js  classdavinci__mcp_1_1resolve__client_1_1DaVinciResolveClient-members.html  classdavinci__mcp_1_1resolve__client_1_1DaVinciResolveClient.html  classdavinci__mcp_1_1resolve__client_1_1DaVinciResolveClient.js  classdavinci__mcp_1_1resolve__client_1_1DaVinciResolveConnectionError.html  classdavinci__mcp_1_1resolve__client_1_1DaVinciResolveError.html  classdavinci__mcp_1_1resolve__client_1_1DaVinciResolveNotRunningError.html  classdavinci__mcp_1_1server_1_1DaVinciMCPServer-members.html  classdavinci__mcp_1_1server_1_1DaVinciMCPServer.html  classdavinci__mcp_1_1server_1_1DaVinciMCPServer.js  classdavinci__mcp_1_1types_1_1DaVinciMediaPool-members.html  classdavinci__mcp_1_1types_1_1DaVinciMediaPool.html  classdavinci__mcp_1_1types_1_1DaVinciMediaPool.js  classdavinci__mcp_1_1types_1_1DaVinciMediaPool__coll__graph.map  classdavinci__mcp_1_1types_1_1DaVinciMediaPool__inherit__graph.md5  classdavinci__mcp_1_1types_1_1DaVinciProject-members.html  classdavinci__mcp_1_1types_1_1DaVinciProject.html  classdavinci__mcp_1_1types_1_1DaVinciProject.js  classdavinci__mcp_1_1types_1_1DaVinciProjectManager-members.html  classdavinci__mcp_1_1types_1_1DaVinciProjectManager.html  classdavinci__mcp_1_1types_1_1DaVinciProjectManager.js  classdavinci__mcp_1_1types_1_1DaVinciProjectManager__inherit__graph.map  classdavinci__mcp_1_1types_1_1DaVinciProjectManager__inherit__graph.md5  classdavinci__mcp_1_1types_1_1DaVinciProject__coll__graph.map  classdavinci__mcp_1_1types_1_1DaVinciProject__coll__graph.md5  classdavinci__mcp_1_1types_1_1DaVinciResolveApp-members.html  classdavinci__mcp_1_1types_1_1DaVinciResolveApp.html  classdavinci__mcp_1_1types_1_1DaVinciResolveApp.js  classdavinci__mcp_1_1types_1_1DaVinciResolveApp__coll__graph.md5  classdavinci__mcp_1_1types_1_1DaVinciResolveApp__inherit__graph.map  classdavinci__mcp_1_1types_1_1DaVinciTimeline-members.html  classdavinci__mcp_1_1types_1_1DaVinciTimeline.html  (+58 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  files_5.js  functions_0.js  functions_2.js  (+24 more)
hooks/: ci-check.sh  pre-push
src/davinci_mcp/: __init__.py  cli.py  resolve_client.py  server.py  types.py
tests/: test_security.py
(+4 files in other folders)
