[project]
name = "davinci-mcp-professional"
dynamic = ["version"]
description = "Model Context Protocol server for DaVinci Resolve integration"
readme = "README.md"
license = { file = "COPYING.md" }
authors = [
    { name = "Hoyt Harness", email = "hoyt.harness@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.10.0",
    "anyio>=4.9",
    "httpx>=0.27.1,<1.0.0",
    "pydantic>=2.12.0",
    "click>=8.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
davinci-mcp = "davinci_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/Positronikal/davinci-mcp-professional"
Repository = "https://github.com/Positronikal/davinci-mcp-professional"
Issues = "https://github.com/Positronikal/davinci-mcp-professional/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "src/davinci_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/davinci_mcp"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "safety>=3.0.0",
    "bandit>=1.7.8",
    "pip-licenses>=4.4.0",
    "pyright>=1.1.400",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
reportUntypedBaseClass = false
reportUntypedNamedTuple = false
reportPrivateUsage = false
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "build",
    "dist",
    "tests",
]
include = [
    "src",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "C4", "PERF"]
ignore = ["PERF203"]
